--- a/chamber/styles/index-small.css
+++ b/chamber/styles/index-small.css
@@ -106,6 +106,23 @@
         position: relative;
     }
 
+    header h1,
+    header h2,
+    header h3 {
+        color: var(--white-col);
+
+    }
+
+    section {
+        color: var(--white-col);
+    }
+
+    section h1,
+    section h2,
+    section h3 {
+        color: var(--gold-col);
+    }
+
     .cta {
         position: absolute;
         bottom: 5px;
